La till js mapp

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<div>
 			<div>
-				<script src="main.js"></script>
+				<script src="js/main.js"></script>
 				<div id="menu">
 					<ul id="menu">
 						<li><a href="start.html" onclick="showStart();return false;">Start <img src="home.png" id="home"/></a></li>
