--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-<h1>Kontakta oss</h1><form>
+<h1>Kontakta oss</h1>
+<form>
 	Namn: <input type="text" id="name" /><br/>
 	Epost: <input type="text" id="email" name="email" /><br/>
 	Telefon: <input type="text" name="phonenumber" id="tfn" /><br/>
