--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< Updated upstream
-<head>
-	<title>Gottfrids munkfabrik</title>
-	<link rel="icon" type="image/png" href="favicon.png">
-	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/utils/Draggable.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/plugins/ScrollToPlugin.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/plugins/ColorPropsPlugin.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/plugins/CSSRulePlugin.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/plugins/TextPlugin.min.js"></script>
-	<script src="//use.typekit.net/xmj3xyt.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
-
-</head>
-<body>
-	<div id="wrapper">
-		<h1>Gottfrids Munkfabrik</h1>
-		<p>NEJ!!!</p>
-=======
 	<head>
 		<title>Gottfrids munkfabrik</title>
-		<link rel="icon" type="image/png" href="favicon.png">
+		<meta charset="utf-8" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="icon" type="image/png" href="favicon.png" />
 		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/utils/Draggable.min.js"></script>
@@ -32,100 +14,17 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/plugins/TextPlugin.min.js"></script>
 		<script src="//use.typekit.net/xmj3xyt.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
-	<style>
-
-<<<<<<< HEAD
-	body {
-		background-color: #FFA7E3;
-		background-image: url('askdksajdksdlajsndnakxc.png');
-		background-size: cover;
-		height: 100%;
-		background-repeat: no-repeat;
-	}
-
-	h1 {
-		color: white;
-		font-size: 48pt;
-		text-align: center;
-		font-family: "hwt-american-chromatic";
-		font-weight: normal;
-	}
-
-	#home {
-		width: 100px;
-		height: 100px;
-	}
-
-	#donuts {
-		width: 100px;
-		height: 100px;
-	}
-
-	#deliveyr {
-	width: 100px;
-			height: 100px;
-	}
-
-	#menu {
-		list-style: none;
-		padding: 0;
-		text-align: center;
-		width: 100%;
-		margin-bottom: 40px;
-	}
-
-	#menu li {
-		padding-left: 0;
-		margin-left: 0;
-		display: inline-block;
-		font-family: sans-serif;
-		margin-right: 20px;
-	}
-
-	a {
-		text-decoration: none;
-		color: white;
-		font-weight: bold;
-		text-transform: uppercase;
-		letter-spacing:1px;
-	}
-
-	#menu li:last-of-type {
-		margin-right: 0;
-	}
-
-	#wrapper {
-		margin-top: 50px;
-	}
-
-	#content {
-		width: 500px;
-		padding: 20px;
-		margin-top: 40px;
-		background-color: rgba(255, 255, 255, .8);
-		margin: 0 auto;
-	}
-
-	#content h1 {
-		font-family: Arial;
-		color: black;
-	}
-
-	table {
-		width: 100%;
-	}
-	</style>
 	</head>
 	<body>
 		<div id="wrapper">
 			<h1>Gottfrids Munkfabrik</h1>
 			<div id="menu">
 				<ul id="menu">
-					<li><a href="start.html" onclick="showStart();return false;">Start <img src="home.png" id="home"/></a></li>
-					<li><a href="våra_munkar.html" onclick="showMunkar(); return false;">Våra munkar <img src="Donut.png" id="donuts"></a></li>
-					<li><a href="leveransvillkor.html" onclick="showleveransvillkor(); return false;">Leveransvillkor <img srC="delivery.png" id="delivery"></a></li>
-					<li><a href="about.html" onclick="showabout(); return false;">Om oss<img src="user-icon.png"></a></li>
-					<li><a href="contact.html" onclick="showContact(); return false;">Kontakt <img sec="contact_icon[1].png"></a></li>
+					<li><a href="start.html" onclick="showStart();return false;">Start <img src="img/home.png" id="home" /></a></li>
+					<li><a href="våra_munkar.html" onclick="showMunkar(); return false;">Våra munkar <img src="img/donut.png" id="donuts" /></a></li>
+					<li><a href="leveransvillkor.html" onclick="showleveransvillkor(); return false;">Leveransvillkor <img src="img/deliveryFood.png" id="delivery" /></a></li>
+					<li><a href="about.html" onclick="showabout(); return false;">Om oss<img src="img/userIcon.png" /></a></li>
+					<li><a href="contact.html" onclick="showContact(); return false;">Kontakt <img src="img/contactIcon.png" /></a></li>
 				</ul>
 			</div><!-- #menu -->
 
@@ -133,27 +32,8 @@
 				<h1>Välkommen till Gottfrids Munkfabrik</h1>
 				<p>Du hittar oss på Hamngatan 8 i Snaskköping.</p>
 			</div><!-- #content -->
-		</div><!-- #wrapper -->
-		<script src="main.js"></script>
-	</body>
-=======
-		<div>
-			<div>
-				<script src="js/main.js"></script>
-				<div id="menu">
-					<ul id="menu">
-						<li><a href="start.html" onclick="showStart();return false;">Start <img src="home.png" id="home"/></a></li>
-						<li><a href="våra_munkar.html" onclick="showMunkar(); return false;">Våra munkar <img src="Donut.png" id="donuts"></a></li>
-						<li><a href="leveransvillkor.html" onclick="showleveransvillkor(); return false;">Leveransvillkor <img srC="delivery.png" id="delivery"></a></li>
-						<li><a href="about.html" onclick="showabout(); return false;">Om oss<img src="user-icon.png"></a></li>
-						<li><a href="contact.html" onclick="showContact(); return false;">Kontakt <img sec="contact_icon[1].png"></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
 
-		<div id="content"><h1>Välkommen till Gottfrids Munkfabrik</h1><p>Du hittar oss på Hamngatan 8 i Snaskköping.</p></div>
-	</div>
-</body>
->>>>>>> origin/master
+		</div><!-- #wrapper -->
+		<script src="js/main.js"></script>
+	</body>
 </html>
