--- a/start.html
+++ b/start.html
@@ -1,1 +1,2 @@
-<h1>Välkommen till Gottfrids Munkfabrik</h1><p>Du hittar oss på Hamngatan 8 i Snaskköping.</p>
+<h1>Välkommen till Gottfrids Munkfabrik</h1>
+<p>Du hittar oss på Hamngatan 8 i Snaskköping.</p>
