change index and css

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 			<h1>Gottfrids Munkfabrik</h1>
 			<div id="menu">
 				<ul id="menu">
-					<li><a href="start.html" onclick="showStart();return false;">Start <img src="img/home.png" id="home" /></a></li>
-					<li><a href="våra_munkar.html" onclick="showMunkar(); return false;">Våra munkar <img src="img/donut.png" id="donuts" /></a></li>
-					<li><a href="leveransvillkor.html" onclick="showleveransvillkor(); return false;">Leveransvillkor <img src="img/deliveryFood.png" id="delivery" /></a></li>
-					<li><a href="about.html" onclick="showabout(); return false;">Om oss<img src="img/userIcon.png" /></a></li>
-					<li><a href="contact.html" onclick="showContact(); return false;">Kontakt <img src="img/contactIcon.png" /></a></li>
+					<li><a href="start.html" onclick="showStart();return false;">Start </br><img src="img/home.png" id="home" /></a></li>
+					<li><a href="våra_munkar.html" onclick="showMunkar(); return false;">Våra munkar </br><img src="img/donut.png" id="donuts" /></a></li>
+					<li><a href="leveransvillkor.html" onclick="showleveransvillkor(); return false;">Leveransvillkor </br><img src="img/deliveryFood.png" id="delivery" /></a></li>
+					<li><a href="about.html" onclick="showabout(); return false;">Om oss </br><img src="img/userIcon.png" id="about" /></a></li>
+					<li><a href="contact.html" onclick="showContact(); return false;">Kontakt </br><img src="img/contactIcon.png" id="contact" /></a></li>
 				</ul>
 			</div><!-- #menu -->
 
