Ändra i js och bilder
Ändrat storlek på bilderna och js filen

--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,6 @@
 <script>
 var i = 0;
 // funkar inte, varför?!?!
-window.setInterval(function() {console.log("Du har varit inne på sidan i " + i + " sekunder"; i++;)}, 1000);
+window.setInterval(function() {
+	console.log("Du har varit inne på sidan i " + i + " sekunder"; i++;)}, 1000);
 </script>
