--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
 	<body>
 		<div id="wrapper">
 			<h1>Gottfrids Munkfabrik</h1>
-			<div id="menu">
 				<ul id="menu">
-					<li><a href="start.html" onclick="showPage(start);return false;">Start </br><img src="img/home.png" id="home" /></a></li>
-					<li><a href="products.html" onclick="showPage(products); return false;">Våra munkar </br><img src="img/donut.png" id="donuts" /></a></li>
-					<li><a href="conditions.html" onclick="showPage(conditions); return false;">Leveransvillkor </br><img src="img/deliveryFood.png" id="delivery" /></a></li>
-					<li><a href="about.html" onclick="showPage(about); return false;">Om oss </br><img src="img/userIcon.png" id="about" /></a></li>
-					<li><a href="contact.html" onclick="showPage(contact); return false;">Kontakt </br><img src="img/contactIcon.png" id="contact" /></a></li>
+					<li><a href="start.html">Start </br><img src="img/home.png" id="home" /></a></li>
+					<li><a href="products.html">Våra munkar </br><img src="img/donut.png" id="donuts" /></a></li>
+					<li><a href="conditions.html">Leveransvillkor </br><img src="img/deliveryFood.png" id="delivery" /></a></li>
+					<li><a href="about.html">Om oss </br><img src="img/userIcon.png" id="about" /></a></li>
+					<li><a href="contact.html">Kontakt </br><img src="img/contactIcon.png" id="contact" /></a></li>
 				</ul>
-			</div><!-- #menu -->
 
 			<div id="content">
 				<h1>Välkommen till Gottfrids Munkfabrik</h1>
