--- a/conditions.html
+++ b/conditions.html
@@ -24,14 +24,14 @@
 <script>
 // Varför funkar inte helikoptern med ajax?!
 var rofl = document.getElementById('rofl').innerHTML,
-	chMap = [
+var	chMap = [
 		[0, 1, 2, 3, 4, 5, 6, 7, 8, 43, 78],
 		[14, 15, 16, 17, 18, 19, 20, 21, 22, 59, 61]
 	],
-	chMapLength = chMap.length,
-	isBlank = true,
-	isBlankCounter = 1,
-	nonBlankTemplate = ['R', 'O', 'F', 'L', ':', 'R', 'O', 'F', 'L', 'L', 'L'];
+var	chMapLength = chMap.length,
+var	isBlank = true,
+var	isBlankCounter = 1,
+var	nonBlankTemplate = ['R', 'O', 'F', 'L', ':', 'R', 'O', 'F', 'L', 'L', 'L'];
 
 String.prototype.replaceAt = function (index, character) {
 	return this.substr(0, index) + character + this.substr(index + character.length);
