--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
 	Epost: <input type="text" id="email" name="email" /><br/>
 	Telefon: <input type="text" name="phonenumber" id="tfn" /><br/>
 	Meddelande: <textarea></textarea><br/>
-	<input type="submit" value="Skicka" onclick="sendForm();return false;" />
+	<button id="send">Skicka</button>
 </form>
 
 <script>
 var i = 0;
 // funkar inte, varför?!?!
-window.setInterval(function() {
-	console.log("Du har varit inne på sidan i " + i + " sekunder"; i++;)}, 1000);
+/*window.setInterval(function() {
+	console.log("Du har varit inne på sidan i " + i + " sekunder"; i++;)}, 1000);*/
 </script>
